--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -18,15 +18,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since our coverage will necessarily be brief belwo listed you can find some more pointers to excellent resources for learning python.    \n",
+    "Since our coverage will necessarily be brief belwo listed you can find some more pointers to excellent resources for learning python. Links under 1 are short and very basic. Links under 2 short but smehwat more advanced and Links under 3 are long and comprehensive.    \n",
     " \n",
-    "**1. Tutorials by software carpentry for scientists.**\n",
+    "**1. Short tutorials by software carpentry for scientists**\n",
     "   - [Programming Python](http://swcarpentry.github.io/python-novice-inflammation/)\n",
     "   - [Plotting and programming in Python ](http://swcarpentry.github.io/python-novice-gapminder/)\n",
     "\n",
     "\n",
     "**2. Condensed coverage of scientific applicaitons can be found in the following online notes:**\n",
+    "   - [Python programming for Scientists](http://wwwstaff.ari.uni-heidelberg.de/mitarbeiter/rschmidt/pycourse/index.html)\n",
     "   - [Introduction to Python for Computational Science and Engineering](https://fangohr.github.io/introduction-to-python-for-computational-science-and-engineering/)\n",
+    "   - [Scientific Python lectures by Robert Johanssen](https://nbviewer.jupyter.org/github/jrjohansson/scientific-python-lectures/tree/master/)\n",
+    "   \n",
     "    \n",
     "\n",
     "**3. Finally there are the official Python documentaiton and SciPy tutorials. These provide much more in depth and thorough coverage.**\n",
@@ -80,7 +83,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python is a high-level, dynamically typed multiparadigm programming language. Python code is often said to be almost like pseudocode, since it allows you to express very powerful ideas in very few lines of code while being very readable. "
+    "Python is a high-level, dynamically typed multiparadigm programming language. \n",
+    "\n",
+    "Python code is often said to be almost like pseudocode, since it allows you to express very powerful ideas in very few lines of code while being very readable. A few examples without explanations are below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pizza\n",
+      "sushi\n",
+      "taco\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu = [\"pizza\", \"sushi\", \"taco\"] \n",
+    "\n",
+    "for item in menu:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yum!\n",
+      "eww\n",
+      "maybe not today\n",
+      "eww\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu = [\"sushi\", \"123\", \"taco\", \"frog\"] \n",
+    "\n",
+    "for item in menu:\n",
+    "    \n",
+    "    if item == \"sushi\":                     \n",
+    "        print(\"yum!\")\n",
+    "        \n",
+    "    elif item == \"taco\":                \n",
+    "        print(\"maybe not today\")\n",
+    "        \n",
+    "    else:\n",
+    "        print(\"eww\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While these are silly exmples for illustration with same simplicity of code you can do fiarly sophisticated calculations.\n",
+    "\n",
+    "Do not worry if some of these commands seem unfamiliar we are going to explain them later on. "
    ]
   },
   {
@@ -94,51 +161,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are older version of python (Python 2.7) and newer versions (Python 3.6+). We will always use the latest version.\n",
+    "There are older version of python (Python 2.7) and newer versions (Python 3.7+). We will always use the latest version.\n",
     "\n",
-    "You can check your Python version at the command line by running `python --version`."
+    "If you have installed python on your computer you can check your Python version at the command line by running `python --version`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basic data types"
+    "### Basic data types\n",
+    "\n",
+    "Python has a variety of data types for managing different kinds of data. Examples are:\n",
+    "- numbers.\n",
+    "- strings.\n",
+    "- lists. \n",
+    "- dictionaries.\n",
+    "- sets.\n",
+    "- tupes, etc. \n",
+    "\n",
+    "Some of these are _point types_ such as simple numbers often used for basic arithmetic operations. Others are of _container kind_ which contain sequences of numbers often used as vectors and matrices.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Numbers"
+    "## Numbers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Numbers are an important data type for us which we use to do all sorts of computations. It is imporatnt to know that the numbers in python can be:\n",
+    "- Integers: -1, -2, 0,\n",
+    "- Floats: 0.001, 4.56, 3.14\n",
+    "- Complex numbers: 1.2+2.5j, 2j, 3+1j\n",
+    "\n",
+    "Let us begin creating some numeric data and assining variable names:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 3    # variable called x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 <class 'int'>\n"
+      "3\n"
      ]
     }
    ],
    "source": [
-    "x = 3\n",
-    "print(x, type(x))"
+    "print(x) # print contents of x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -161,126 +253,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "8\n"
-     ]
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x += 1\n",
-    "print(x)  # Prints \"4\"\n",
-    "x *= 2\n",
-    "print(x)  # Prints \"8\""
+    "type(x) # lets find out what kind of number is this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** change the number type to float and complex number and execute the above cells again"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'float'>\n",
-      "2.5 3.5 5.0 6.25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "y = 2.5\n",
-    "print(type(y)) # Prints \"<type 'float'>\"\n",
-    "print(y, y + 1, y * 2, y ** 2) # Prints \"2.5 3.5 5.0 6.25\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that unlike many languages, Python does not have unary increment (x++) or decrement (x--) operators.\n",
-    "\n",
-    "Python also has built-in types for long integers and complex numbers; you can find all of the details in the [documentation](https://docs.python.org/2/library/stdtypes.html#numeric-types-int-float-long-complex)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Booleans"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Python implements all of the usual operators for Boolean logic, but uses English words rather than symbols (`&&`, `||`, etc.):"
+    "x,y,z=1,2,5 # mutliple assingmenets can be done with one line!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'bool'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(3, 5)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "t, f = True, False\n",
-    "print(type(t)) # Prints \"<type 'bool'>\""
+    "x+y, x*z  # Mutliple opearations can be done with one line also!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we let's look at the operations:"
+    "## Strings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "True\n",
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(t and f) # Logical AND;\n",
-    "print(t or f)  # Logical OR;\n",
-    "print(not t)   # Logical NOT;\n",
-    "print(t != f)  # Logical XOR;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -316,24 +352,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world 12\n"
-     ]
-    }
-   ],
-   "source": [
-    "hw12 = '%s %s %d' % (hello, world, 12)  # sprintf style string formatting\n",
-    "print(hw12)  # prints \"hello world 12\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -342,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -367,13 +385,6 @@
     "print(s.replace('l', '(ell)'))  # Replace all instances of one substring with another;\n",
     "                               # prints \"he(ell)(ell)o\"\n",
     "print('  world '.strip())  # Strip leading and trailing whitespace; prints \"world\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can find a list of all string methods in the [documentation](https://docs.python.org/2/library/stdtypes.html#string-methods)."
    ]
   },
   {
@@ -406,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +630,7 @@
        "[0, 1, 4, 9, 16]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +661,7 @@
        "[0, 1, 4, 9, 16]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +690,7 @@
        "[0, 4, 16]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -958,15 +969,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.15665976 0.28540437]\n",
-      " [0.84760128 0.48403869]]\n"
+      "[[0.47091097 0.51705716]\n",
+      " [0.00795315 0.14501724]]\n"
      ]
     }
    ],
@@ -998,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datatypes"
+    "### Numpy Datatypes"
    ]
   },
   {
@@ -1351,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1569,6 +1580,7 @@
      "text": [
       "[[19 22]\n",
       " [43 50]]\n",
+      "\n",
       "[[19 22]\n",
       " [43 50]]\n"
      ]
@@ -1579,7 +1591,8 @@
     "# [[19 22]\n",
     "#  [43 50]]\n",
     "print(x.dot(y)) \n",
-    "print(np.dot(x, y)) "
+    "print(\"\")\n",
+    "print(x@y) "
    ]
   },
   {
@@ -1591,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
