--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x        # Works the same for single line but for multiple lines you need print. See below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -272,6 +292,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4332385680"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(x) # Show the adress of the variable in memory of computer"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -305,6 +345,73 @@
    ],
    "source": [
     "x+y, x*z  # Mutliple opearations can be done with one line also!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Complex numberes handled just as easily"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z1=10+2j\n",
+    "z2=3-1j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10.0, 2.0, (10-2j))"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# extract real imaginery parts, conjugate\n",
+    "z1.real, z1.imag, z1.conjugate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z1_abs = z1 * z1.conjugate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10.198039027185569+0j)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z1_abs**0.5"
    ]
   },
   {
@@ -412,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A list is the Python equivalent of an array, but is resizeable and can contain elements of different types:"
+    "A list is a generic container for holding any python type be it a string, numbers other lists or a mix of everything. "
    ]
   },
   {
@@ -530,7 +637,7 @@
     }
    ],
    "source": [
-    "nums = range(0,5,1)    # xrange(i,j,k) is a built-in function that creates a list of integers from i to j with a stride k\n",
+    "nums = range(0,5,1) # xrange(i,j,k) is a built-in function that creates a list of integers from i to j with a stride k\n",
     "nums=list(nums)     # make a list\n",
     "print(nums)         # Prints \"[0, 1, 2, 3, 4]\"\n",
     "print(nums[2:4])    # Get a slice from index 2 to 4 (exclusive); prints \"[2, 3]\"\n",
@@ -581,34 +688,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want access to the index of each element within the body of a loop, use the built-in `enumerate` function:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#1: cat\n",
-      "#2: dog\n",
-      "#3: monkey\n"
-     ]
-    }
-   ],
-   "source": [
-    "animals = ['cat', 'dog', 'monkey']\n",
-    "for idx, animal in enumerate(animals):\n",
-    "    print('#%d: %s' % (idx + 1, animal))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### List comprehensions:"
    ]
   },
@@ -647,12 +726,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can make this code simpler using a list comprehension:"
+    "You can make this code simpler using a special trick of lists called list comprehension:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -661,14 +740,14 @@
        "[0, 1, 4, 9, 16]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
-    "squares = [x ** 2 for x in nums]\n",
+    "squares = [x ** 2 for x in nums]  # This is a list comprehension\n",
     "squares"
    ]
   },
@@ -717,7 +796,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sign(x):\n",
+    "    if x > 0:\n",
+    "        return 'positive'\n",
+    "    elif x < 0:\n",
+    "        return 'negative'\n",
+    "    else:\n",
+    "        return 'zero'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -731,48 +825,38 @@
     }
    ],
    "source": [
-    "def sign(x):\n",
-    "    if x > 0:\n",
-    "        return 'positive'\n",
-    "    elif x < 0:\n",
-    "        return 'negative'\n",
-    "    else:\n",
-    "        return 'zero'\n",
-    "\n",
     "for x in [-1, 0, 1]:\n",
     "    print(sign(x))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 160,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "We will often define functions to take optional keyword arguments, like this:"
+    "def sq_func(x):\n",
+    "    return x**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, Bob!\n",
-      "HELLO, FRED\n"
-     ]
+     "data": {
+      "text/plain": [
+       "16.0"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def hello(name, loud=False):\n",
-    "    if loud:\n",
-    "        print('HELLO, %s' % name.upper())\n",
-    "    else:\n",
-    "        print('Hello, %s!' % name) \n",
-    "\n",
-    "hello('Bob')\n",
-    "hello('Fred', loud=True)"
+    "sq_func(4.0)"
    ]
   },
   {
@@ -786,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numpy is the core library for scientific computing in Python. It provides a high-performance multidimensional array object, and tools for working with these arrays. If you are already familiar with MATLAB, you might find this [tutorial](http://wiki.scipy.org/NumPy_for_Matlab_Users) useful to get started with Numpy."
+    "Numpy is the core library for scientific computing in Python. It provides a high-performance multidimensional array object, and tools for working with these arrays. "
    ]
   },
   {
@@ -794,15 +878,6 @@
    "metadata": {},
    "source": [
     "To use Numpy, we first need to import the `numpy` package:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
@@ -828,7 +903,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1, 2, 3])  # Create 1D array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +925,6 @@
     }
    ],
    "source": [
-    "a = np.array([1, 2, 3])  # Create a rank 1 array\n",
     "print(type(a), a.shape, a[0], a[1], a[2]) \n",
     "a[0] = 5                 # Change an element of the array\n",
     "print(a)                   "
@@ -849,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -1350,48 +1433,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numpy Datatypes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Every numpy array is a grid of elements of the same type. Numpy provides a large set of numeric datatypes that you can use to construct arrays. Numpy tries to guess a datatype when you create an array, but functions that construct arrays usually also include an optional argument to explicitly specify the datatype. Here is an example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "int64 float64 int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = np.array([1, 2])  # Let numpy choose the datatype\n",
-    "y = np.array([1.0, 2.0])  # Let numpy choose the datatype\n",
-    "z = np.array([1, 2], dtype=np.int64)  # Force a particular datatype\n",
-    "\n",
-    "print(x.dtype, y.dtype, z.dtype) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can read all about numpy datatypes in the [documentation](http://docs.scipy.org/doc/numpy/reference/arrays.dtypes.html)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Array math"
    ]
   },
@@ -1404,7 +1445,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([[1,2],[3,4]], dtype=np.float64)\n",
+    "y = np.array([[5,6],[7,8]], dtype=np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -1412,19 +1463,13 @@
      "output_type": "stream",
      "text": [
       "[[ 6.  8.]\n",
-      " [10. 12.]]\n",
-      "[[ 6.  8.]\n",
       " [10. 12.]]\n"
      ]
     }
    ],
    "source": [
-    "x = np.array([[1,2],[3,4]], dtype=np.float64)\n",
-    "y = np.array([[5,6],[7,8]], dtype=np.float64)\n",
-    "\n",
     "# Elementwise sum; both produce the array\n",
-    "print(x + y) \n",
-    "print(np.add(x, y)) "
+    "print(x + y) "
    ]
   },
   {
