Add comments and whitespace sections

--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -185,9 +185,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are older version of python (Python 2.7) and newer versions (Python 3.7+). We will always use the latest version.\n",
+    "There are older version of Python (Python 2.7) and newer versions (Python 3.7+). We will always use the latest version.\n",
     "\n",
     "If you have installed Python on your computer you can check your Python version at the command line by running `python --version`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comments\n",
+    "A “comment” is a part of code that is not run. It is a way to\n",
+    "write notes about what your code is doing at certain points. This is helpful\n",
+    "when you, or someone else, looks at the code later, so they know what it is\n",
+    "doing. To make a comment in Python, precede the comment with a #."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comments can be on their own line like this\n",
+    "print(\"Hello\")\n",
+    "\n",
+    "print(\"World\") # A comment can also be at the end of a line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Whitespace\n",
+    "In programming, white space refers to all of the space in your document that is not filled with code.  Examples of whitespace are spaces, tabs (indents), and newlines (when you press enter and go to the next line). Python is very particular about white space and how you use it, specifically the use of indentations and newlines."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Newlines\n",
+    "Python uses newline characters to separate logical lines of code. A logical line of code consists of a \"command\" in code. It is considered good Python style, or _Pythonic_ , to separate logical lines with newlines, although other methods exist."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\") # This is a logical line that assigns the value 16 to x\n",
+    "print(\"World\") # This is another logical line, on the next line, that prints the value of x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Indentation\n",
+    "Tab characters, or indentation, are used to indicate code blocks in Python. These will be seen later in the tutorial with for loops, while loops, if statements, and other structures. For now, the take-home message is to follow the indentation pattern of the example and avoid unnecessary indentation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-9-3c37af9014f9>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-3c37af9014f9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"World\") # Unnecessary indentation, this code will not work\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\")     # This line is not indented, so it is fine\n",
+    "    print(\"World\") # Unnecessary indentation, this code will not work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise:** Remove unnecessary indentation in the broken code above and execute it again."
    ]
   },
   {
@@ -320,26 +421,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10968864"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "id(x) # Show the address of the variable in memory of computer"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -372,7 +453,7 @@
     }
    ],
    "source": [
-    "x+y, x*z  # Multiple operations can be done with one line also!"
+    "x+y, x*z  # Multiple operations can be done with one line also, separated by a comma!"
    ]
   },
   {
@@ -384,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +484,7 @@
        "(10.0, 2.0, (10-2j))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,11 +496,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(104+0j)\n"
+     ]
+    }
+   ],
    "source": [
-    "z1_abs = z1 * z1.conjugate()"
+    "z1_abs = z1 * z1.conjugate()\n",
+    "print(z1_abs)"
    ]
   },
   {
@@ -451,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +572,7 @@
     }
    ],
    "source": [
-    "hw = hello + ' ' + world  # String concatenation with the plus (+) sign\n",
+    "hw = hello + ' ' + world  # String concatenation with the + operator\n",
     "print(hw)  # prints \"hello world\""
    ]
   },
