List tutorial update

--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -253,15 +253,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-9-3c37af9014f9>, line 2)",
+     "evalue": "unexpected indent (<ipython-input-11-3c37af9014f9>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-3c37af9014f9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"World\") # Unnecessary indentation, this code will not work\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-3c37af9014f9>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"World\") # Unnecessary indentation, this code will not work\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -415,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x,y,z=1,2,5 # multiple assignments can be done with one line!"
+    "x, y, z = 1, 2, 5 # multiple assignments can be done with one line!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -433,13 +433,13 @@
        "(3, 5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x+y, x*z  # Multiple operations can be done with one line also, separated by a comma!"
+    "x + y, x * z  # Multiple operations can be done with one line also, separated by a comma!"
    ]
   },
   {
@@ -451,12 +451,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "z1=10+2j\n",
-    "z2=3-1j"
+    "z1 = 10+2j\n",
+    "z2 = 3-1j"
    ]
   },
   {
@@ -623,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A list is a generic container for holding any Python type, be it a string, numbers, other lists, or a mix of everything. "
+    "A list is a generic container for holding any Python type, be it a string, numbers, other lists, or a mix of everything."
    ]
   },
   {
@@ -635,14 +635,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 1, 2] 2\n",
+      "[3, 1, 2]\n",
+      "2\n",
       "2\n"
      ]
     }
    ],
    "source": [
     "xs = [3, 1, 2]   # Create a list\n",
-    "print(xs, xs[2])\n",
+    "print(xs)        # Print the entire list\n",
+    "print(xs[2])     # Index the list with square brackets; indices start at 0 for the first element, so index 2 is the third element\n",
     "print(xs[-1])    # Negative indices count from the end of the list; prints \"2\""
    ]
   },
