--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -1016,7 +1016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Functions"
+    "## Functions"
    ]
   },
   {
@@ -2267,16 +2267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x10c29cf28>]"
+       "[<matplotlib.lines.Line2D at 0x10f906780>]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2315,16 +2315,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x10cd014e0>"
+       "<matplotlib.legend.Legend at 0x111061cc0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2356,9 +2356,18 @@
     "ax.plot(x, y_cos)\n",
     "ax.set_xlabel('x axis label')\n",
     "ax.set_ylabel('y axis label')\n",
-    "plt.title('Sine and Cosine')\n",
-    "plt.legend(['Sine', 'Cosine'])"
+    "ax.set_title('Sine and Cosine')\n",
+    "ax.legend(['Sine', 'Cosine'])\n",
+    "\n",
+    "#fig.savefig(\"myfig.pdf\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
