--- a/content/AppendixA_complex_numbers.ipynb
+++ b/content/AppendixA_complex_numbers.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Reccomended:** Watch the  following YouTube video \n",
+    "[\"complex numbers are real, part-1\"](https://www.youtube.com/watch?v=T647CGsuOVU)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Complex Numbers\n",
     "\n",
     "A complex number has a **real part** $ x $ and a purely **imaginary part** $ y $.\n",
