Added if statement introduction and examples

--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -1016,6 +1016,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## The if statement\n",
+    "\n",
+    "The `if statement` allows you to execute a block of code optionally, if\n",
+    "certain conditions are met. This is called *conditional execution*. To\n",
+    "write an `if statement` in Python, begin the first line with the word\n",
+    "`if`. Following the word `if`, an expression which evaluates to True or\n",
+    "False must be put in parentheses (), called the *conditional statement*.\n",
+    "This can be a conditional expression, an expression involving boolean\n",
+    "operators, or anything else that evaluates to True or False. End this\n",
+    "first line with a colon. Follow the first line with the code block you\n",
+    "want executed if your expression evaluates to True. This code block must\n",
+    "be indented from the first line of the if statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I entered the conditional block!\n",
+      "I am also part of the conditional block.\n",
+      "Since I am not indented, I am not in the \n",
+      "    conditional block and execute every time.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 9\n",
+    "\n",
+    "if( x + 3 > 11):\n",
+    "    print(\"I entered the conditional block!\")\n",
+    "    print(\"I am also part of the conditional block.\")\n",
+    "    \n",
+    "print('''Since I am not indented, I am not in the \n",
+    "    conditional block and execute every time.''')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An if statement can also be extended with a default block of code that\n",
+    "will be executed if none of the conditions of the if statement are met.\n",
+    "This optional, default code block is an `else statement`, which must\n",
+    "come after an `if statement`. Change the value of x below to see\n",
+    "what happens as the conditional statement changes from True to False."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x equals 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 9\n",
+    "\n",
+    "if( x == 9):\n",
+    "    print(\"x equals 9\")\n",
+    "else:\n",
+    "    print(\"x does not equal 9\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is one more extension to the `if statement`. Each if statement can be followed by zero or more `elif statements`. “elif” stands for “else-if”, and these are used to chain together `if statements` with different conditions. Each `elif` line must have a\n",
+    "conditional statement after the `elif`, followed by a colon to end the line, just like for an `if statement`. Again, change x to trigger the different conditions below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x equals 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 9\n",
+    "\n",
+    "if( x == 9):\n",
+    "    print(\"x equals 9\")\n",
+    "elif(x < 9):\n",
+    "    print(\"x is less than 9\")\n",
+    "elif(x > 9 and x < 20):\n",
+    "    print(\"x is between 9 and 20\")\n",
+    "else:\n",
+    "    print(\"x is greater than 20\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Functions"
    ]
   },
@@ -2387,7 +2499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
