Define comparison ops

--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -554,18 +554,18 @@
        "True"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x==z  # ==, !=, >, < comparison operators and return True or False."
+    "x==z  # == (equals), != (not equal), > (greater than), < (less than) comparison operators and return True or False."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +574,7 @@
        "True"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "False"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "True"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "True"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
