--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -50,6 +50,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/whyPy.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -66,6 +73,13 @@
     "Python is a fantastic general-purpose programming language on its own, but with the help of a few popular libraries (numpy, scipy, matplotlib) it becomes a powerful environment for scientific computing.\n",
     "\n",
     "You may already know some Python and that's great! For the rest of you, this section will serve as a quick crash course both on the Python programming language and on the use of Python for scientific computing. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/py-popular2.png)"
    ]
   },
   {
@@ -315,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -749,6 +763,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](./images/list.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A list is a generic container for holding any Python type, be it a string, numbers, other lists, or a mix of everything."
    ]
   },
@@ -850,6 +871,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/sliceList.jpg)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -879,6 +907,13 @@
     "print(nums[:-1])    # Slice indices can be negative; prints [\"0, 1, 2, 3]\"\n",
     "nums[2:4] = [8, 9] # Assign a new sublist to a slice\n",
     "print(nums)         # Prints \"[0, 1, 8, 9, 4]\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/list_slice.png)"
    ]
   },
   {
@@ -1621,6 +1656,20 @@
    ],
    "source": [
     "a[-1,:] # last row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Same principles of slicing and shapes applies to the N-dimensional arrays.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](./images/numpy_3d.png)"
    ]
   },
   {
@@ -2371,7 +2420,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
