complex numbers fix

--- a/content/AppendixA_complex_numbers.ipynb
+++ b/content/AppendixA_complex_numbers.ipynb
@@ -21,29 +21,24 @@
    "source": [
     "### Complex Numbers\n",
     "\n",
-    "A complex number has a **real part** $ x $ and a purely **imaginary part** $ y $.\n",
-    "\n",
+    "A complex number has a **real part** $ x $ and a purely **imaginary part** $ y $.<br>\n",
     "The Euclidean, polar, and trigonometric forms of a complex number $ z $ are:\n",
     "\n",
-    "$$\n",
-    "z = x + iy = re^{i\\theta} = r(\\cos{\\theta} + i \\sin{\\theta})\n",
-    "$$\n",
     "\n",
-    "The second equality above is known as **Euler’s formula**\n",
+    "$$z = x + iy = re^{i\\theta} = r(\\cos{\\theta} + i \\sin{\\theta})$$\n",
     "\n",
-    "- [Euler](https://en.wikipedia.org/wiki/Leonhard_Euler) contributed many other formulas too!  \n",
-    "\n",
-    "\n",
-    "The complex conjugate $ \\bar z $ of $ z $ is defined as\n",
+    "The second equality above is known as **Euler’s formula**. [Euler](https://en.wikipedia.org/wiki/Leonhard_Euler) contributed many other formulas too! The complex conjugate $ \\bar z $ of $ z $ is defined as\n",
     "\n",
     "$$\n",
     "\\bar z = r e^{-i \\theta} = r (\\cos{\\theta} - i \\sin{\\theta} )\n",
     "$$\n",
     "\n",
     "The value $x$ is the **real** part of $z$ and $y$ is the\n",
-    "**imaginary** part of $z$.\n",
+    "**imaginary** part of $z$. The symbol \n",
     "\n",
-    "The symbol $ | z | $ = $ \\bar z z = r $ represents the **modulus** of $ z $.\n",
+    "$ | z |  = \\bar z z = r $ \n",
+    "\n",
+    "represents the **modulus** of $ z $.\n",
     "\n",
     "The value $ r $ is the Euclidean distance of vector $ (x,y) $ from the\n",
     "origin:\n",
