complex numbers fix2

--- a/content/AppendixA_complex_numbers.ipynb
+++ b/content/AppendixA_complex_numbers.ipynb
@@ -34,13 +34,9 @@
     "$$\n",
     "\n",
     "The value $x$ is the **real** part of $z$ and $y$ is the\n",
-    "**imaginary** part of $z$. The symbol \n",
+    "**imaginary** part of $z$. The symbol $|z|  = \\bar z z = r$ represents the **modulus** of $z$.\n",
     "\n",
-    "$ | z |  = \\bar z z = r $ \n",
-    "\n",
-    "represents the **modulus** of $ z $.\n",
-    "\n",
-    "The value $ r $ is the Euclidean distance of vector $ (x,y) $ from the\n",
+    "The value $r$ is the Euclidean distance of vector $(x,y)$ from the\n",
     "origin:\n",
     "\n",
     "$$\n",
@@ -49,9 +45,7 @@
     "\n",
     "The value $ \\theta $ is the angle of $ (x,y) $ with respect to the real axis.\n",
     "\n",
-    "Evidently, the tangent of $ \\theta $ is $ \\left(\\frac{y}{x}\\right) $.\n",
-    "\n",
-    "Therefore,\n",
+    "Evidently, the tangent of $ \\theta $ is $ \\left(\\frac{y}{x}\\right) $. Therefore,\n",
     "\n",
     "$$\n",
     "\\theta = \\tan^{-1} \\Big( \\frac{y}{x} \\Big)\n",
@@ -63,9 +57,7 @@
     "\\cos{\\theta} = \\frac{x}{r} = \\frac{e^{i\\theta} + e^{-i\\theta}}{2} , \\quad\n",
     "\\sin{\\theta} = \\frac{y}{r} = \\frac{e^{i\\theta} - e^{-i\\theta}}{2i} , \\quad\n",
     "\\tan{\\theta} = \\frac{x}{y}\n",
-    "$$\n",
-    "\n",
-    "We’ll need the following imports"
+    "$$"
    ]
   },
   {
@@ -74,6 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We’ll need the following imports to plot complex numbers\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
