complex numbers fix3

--- a/content/AppendixA_complex_numbers.ipynb
+++ b/content/AppendixA_complex_numbers.ipynb
@@ -46,14 +46,10 @@
     "\\bar z = r e^{-i \\theta} = r (\\cos{\\theta} - i \\sin{\\theta} )\n",
     "$$\n",
     "\n",
-    "The symbol $|z|  = \\bar z z = r$ represents the **modulus** of $z$.\n",
-    "\n",
     "The value $r$ is the Euclidean distance of vector $(x,y)$ from the\n",
-    "origin:\n",
+    "origin and is equal to the modulus of $|z|=\\sqrt{\\bar{z}z}$\n",
     "\n",
-    "$$\n",
-    "r = |z| = \\sqrt{x^2 + y^2}\n",
-    "$$\n",
+    "$$r = |z| = \\sqrt{x^2 + y^2}$$\n",
     "\n",
     "The value $ \\theta $ is the angle of $ (x,y) $ with respect to the real axis.\n",
     "\n",
@@ -70,6 +66,13 @@
     "\\sin{\\theta} = \\frac{y}{r} = \\frac{e^{i\\theta} - e^{-i\\theta}}{2i} , \\quad\n",
     "\\tan{\\theta} = \\frac{x}{y}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizing complex numbers using python"
    ]
   },
   {
